mark overrideTheme as deprecated

--- a/packages/blade/docs/guides/ThemePlayground.stories.mdx
+++ b/packages/blade/docs/guides/ThemePlayground.stories.mdx
@@ -15,6 +15,6 @@ import { ThemePlayground } from '../../src/storybook-recipes/ThemePlayground';
 
 # Theme Playground
 
-The theme playground allows you to play around with the theme and see how it affects the components.
+Play around with the theme and see how it affects the components!
 
 <ThemePlayground />
