make requested changes

--- a/packages/blade/docs/guides/CreateTheme.stories.mdx
+++ b/packages/blade/docs/guides/CreateTheme.stories.mdx
@@ -15,7 +15,7 @@ import {
 } from '../../src/components';
 import { createTheme } from '../../src/tokens';
 
-<Meta title="Guides/Theming/createTheme" />
+<Meta title="Guides/Theming/createTheme Function" />
 
 # Custom Brand Theme
 
