--- a/packages/blade/docs/guides/ThemePlayground.stories.mdx
+++ b/packages/blade/docs/guides/ThemePlayground.stories.mdx
@@ -11,7 +11,7 @@ import {
 } from '../../src/components';
 import { ThemePlayground } from '../../src/storybook-recipes/ThemePlayground';
 
-<Meta title="Guides/Theming/Playground" />
+<Meta title="Guides/Theming/Theme Playground" />
 
 # Theme Playground
 
