docs: add temporary intro page

--- a/packages/blade/docs/guides/Intro.stories.mdx
+++ b/packages/blade/docs/guides/Intro.stories.mdx
@@ -2,34 +2,37 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="Guides/Intro" />
 
-<div style={{ margin: '0 auto', maxWidth: '600px', textAlign: 'center' }}>
-
-<h1 align="center">Blade</h1>
-<h4>The Design System that powers Razorpay</h4>
-<p align="center">
-  <a href="https://github.com/styled-components/styled-components">
+<p style={{ textAlign: 'center' }}>
+  <img
+    width="450px"
+    alt="Blade Design System Logo"
+    src="https://raw.githubusercontent.com/razorpay/blade/00a200a8f53c1abff99d81a73fbdcbd12a6d0dca/branding/blade-original.min.svg"
+  />
+</p>
+<br />
+<p style={{ textAlign: 'center' }}>
+  <a href="https://npmjs.org/package/@razorpay/blade">
     <img
-      src="https://img.shields.io/badge/%F0%9F%92%85%20style-styled--components-orange.svg?colorB=db748e&colorA=444444&style=flat-square"
-      alt="Blade is styled with styled-components"
+      alt="Blade Latest Version"
+      src="https://img.shields.io/github/package-json/v/razorpay/blade?style=for-the-badge&labelColor=322&logo=npm&label=@razorpay/Blade&color=darkred&filename=packages%2Fblade%2Fpackage.json"
     />
   </a>
   &nbsp;&nbsp;
-  <a href="https://github.com/facebook/jest">
+  <a href="https://blade.razorpay.com/">
     <img
-      src="https://img.shields.io/badge/tested%20with-jest-15c213.svg?colorA=444444&colorB=15c213&style=flat-square&logo=jest"
-      alt="Blade is tested with jest"
+      alt="Documentation blade.razorpay.com"
+      src="https://img.shields.io/badge/Documentation-blade.razorpay.com-0648EF?style=for-the-badge&labelColor=0012AD&logo=readthedocs&logoColor=eee"
     />
   </a>
   &nbsp;&nbsp;
-  <a href="https://github.com/razorpay/blade/blob/master/LICENSE.md">
+  <a href="https://github.com/razorpay/blade/tree/master/CONTRIBUTING.md">
     <img
-      src="https://img.shields.io/badge/license-MIT-blue.svg?style=flat-square&colorA=444444"
-      alt="Blade is released under the MIT license."
+      alt="Discord Join Chat"
+      src="https://img.shields.io/badge/Contributions-Open-333333?style=for-the-badge&logo=github&logoColor=ffffff&labelColor=111111"
     />
   </a>
 </p>
-
-</div>
+<br />
 
 Blade is a design system that powers Razorpay. It's a cross platform design system that works natively for React Web and React Native.
 
