feat: add API decisions

--- a/packages/blade/docs/guides/Intro.stories.mdx
+++ b/packages/blade/docs/guides/Intro.stories.mdx
@@ -4,7 +4,7 @@ import { Meta } from '@storybook/addon-docs';
 
 <p style={{ textAlign: 'center' }}>
   <img
-    width="450px"
+    width="300px"
     alt="Blade Design System Logo"
     src="https://raw.githubusercontent.com/razorpay/blade/00a200a8f53c1abff99d81a73fbdcbd12a6d0dca/branding/blade-original.min.svg"
   />
@@ -20,7 +20,7 @@ import { Meta } from '@storybook/addon-docs';
   &nbsp;&nbsp;
   <a href="https://github.com/razorpay/blade/tree/master/CONTRIBUTING.md">
     <img
-      alt="Discord Join Chat"
+      alt="Open for Contributions"
       src="https://img.shields.io/badge/Contributions-Open-333333?style=for-the-badge&logo=github&logoColor=ffffff&labelColor=111111"
     />
   </a>
