docs: fix grammar
Co-authored-by: Nitin Kumar <snitin315@gmail.com>

--- a/packages/blade/docs/guides/Intro.stories.mdx
+++ b/packages/blade/docs/guides/Intro.stories.mdx
@@ -27,7 +27,7 @@ import { Meta } from '@storybook/addon-docs';
 </p>
 <br />
 
-Blade is a Design System that powers [Razorpay](https://razorpay.com/)
+Blade is the Design System that powers [Razorpay](https://razorpay.com/)
 
 ## 🔗 Links
 
