docs: improve documentation aesthetics (#1647)
* feat: add branding assets

* docs: override sidebar styles

* feat: override sidebar and shadow styles

* feat: disable backgrounds and grids

* feat: add favicon.ico to assets

* fix: README update

* feat: add badges to readme

* docs(README): update README details

* fix code editor font color issue

* Create tame-pens-explain.md

* docs: add temporary intro page

* fix: remove documentation link

* docs: move README items

* docs: simplify links

* docs: grammar

* docs: typos, add RFCs and API Decisions

* fix: docs li line-height

* feat: add API decisions

* docs: fix grammar

Co-authored-by: Nitin Kumar <snitin315@gmail.com>

* docs: fix grammar

Co-authored-by: Nitin Kumar <snitin315@gmail.com>

* fix: resolve comments

---------

Co-authored-by: Nitin Kumar <snitin315@gmail.com>

--- a/packages/blade/docs/guides/Intro.stories.mdx
+++ b/packages/blade/docs/guides/Intro.stories.mdx
@@ -2,36 +2,46 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="Guides/Intro" />
 
-<div style={{ margin: '0 auto', maxWidth: '600px', textAlign: 'center' }}>
-
-<h1 align="center">Blade</h1>
-<h4>The Design System that powers Razorpay</h4>
-<p align="center">
-  <a href="https://github.com/styled-components/styled-components">
+<p style={{ textAlign: 'center' }}>
+  <img
+    width="300px"
+    alt="Blade Design System Logo"
+    src="https://raw.githubusercontent.com/razorpay/blade/00a200a8f53c1abff99d81a73fbdcbd12a6d0dca/branding/blade-original.min.svg"
+  />
+</p>
+<br />
+<p style={{ textAlign: 'center' }}>
+  <a href="https://npmjs.org/package/@razorpay/blade">
     <img
-      src="https://img.shields.io/badge/%F0%9F%92%85%20style-styled--components-orange.svg?colorB=db748e&colorA=444444&style=flat-square"
-      alt="Blade is styled with styled-components"
+      alt="Blade Latest Version"
+      src="https://img.shields.io/github/package-json/v/razorpay/blade?style=for-the-badge&labelColor=322&logo=npm&label=@razorpay/Blade&color=darkred&filename=packages%2Fblade%2Fpackage.json"
     />
   </a>
   &nbsp;&nbsp;
-  <a href="https://github.com/facebook/jest">
+  <a href="https://github.com/razorpay/blade/tree/master/CONTRIBUTING.md">
     <img
-      src="https://img.shields.io/badge/tested%20with-jest-15c213.svg?colorA=444444&colorB=15c213&style=flat-square&logo=jest"
-      alt="Blade is tested with jest"
-    />
-  </a>
-  &nbsp;&nbsp;
-  <a href="https://github.com/razorpay/blade/blob/master/LICENSE.md">
-    <img
-      src="https://img.shields.io/badge/license-MIT-blue.svg?style=flat-square&colorA=444444"
-      alt="Blade is released under the MIT license."
+      alt="Open for Contributions"
+      src="https://img.shields.io/badge/Contributions-Open-333333?style=for-the-badge&logo=github&logoColor=ffffff&labelColor=111111"
     />
   </a>
 </p>
+<br />
 
-</div>
+Blade is the Design System that powers [Razorpay](https://razorpay.com/)
 
-Blade is a design system that powers Razorpay. It's a cross platform design system that works natively for React Web and React Native.
+## 🔗 Links
+
+- [Docs](https://blade.razorpay.com)
+- [Installation](https://blade.razorpay.com/?path=/docs/guides-installation--page)
+- [@razorpay/blade-old](https://github.com/razorpay/blade-old) (Deprecated, Private)
+
+## ✨ Features
+
+- Cross-Platform (Works Natively on [React Web](https://blade.razorpay.com/?path=/docs/guides-installation--page#%EF%B8%8F-installation) and [React Native](https://blade.razorpay.com/?path=/docs/guides-installation--page#react-native-projects))
+- [White Labelling](https://blade.razorpay.com/?path=/docs/guides-theming-theme-playground--page)
+- [CSS Variables for non-React Projects](https://blade.razorpay.com/?path=/docs/tokens-css-variables--page)
+- [Accessible](https://github.com/razorpay/blade/blob/master/rfcs/2022-04-09-accessibility.md#manual-testing)
+- Documented [RFCs](https://github.com/razorpay/blade/tree/docs/make-docs-pretty/rfcs) and [API Decisions](https://github.com/razorpay/blade/blob/master/packages/blade/src/components/Alert/_decisions/decisions.md)
 
 ## 📦 Packages
 
