docs: add layout discussions

--- a/rfcs/2023-01-06-layout.md
+++ b/rfcs/2023-01-06-layout.md
@@ -458,3 +458,84 @@ Few design systems support a grid system _(12 column, 24 column, etc.)_, althoug
 - [MUI](https://mui.com/material-ui/react-grid/)
 - [Antd](https://ant.design/components/grid)
 - [Bootstrap, the real OG](https://getbootstrap.com/docs/5.3/layout/grid/#how-it-works)
+
+### Discussions
+
+#### Platform Specific Defaults vs Consistent Defaults
+
+- Consistent Defaults: One code, works everywhere
+- ✅ Platform Specific Defaults: React Native | web maintain their own defaults.
+
+**Conclusion:**
+
+Going ahead with Platform Specific Defaults because-
+
+- This will ensure we don’t hamper DX for React Native Developers by enforcing web defaults on them.
+- If someone wants to have same defaults, they can set default values on their end with-
+
+```jsx
+const CrossPlatformBox = (props: BoxProps) => {
+  return <Box display="flex" flexDirection="column" {...props} />;
+};
+```
+
+#### Padding & Margin Shorthands
+
+```jsx
+<Box padding={['spacing.2', 'spacing.1']} />
+```
+
+This syntax is padding shorthand for us. But in other libraries, this takes breakpoint values (considers first value for mobile and second for desktop)
+
+**Alternative:**
+
+```jsx
+<Box padding="spacing.2 spacing.1" />
+```
+
+**Conclusion:**
+
+We're going with first array syntax because-
+
+- Since typescript would break on string syntax.
+- There will be little learning curve but consumers will get used to it.
+
+#### Additional Prop Supports In First Release
+
+- **`background-color`**
+
+  We decided to support it with `surface.background.*` tokens because there were clear usecases of setting surface background colors.
+
+- **Support for `border-size: box` prop in Alert and Card**
+
+  Added.
+
+- **`as` prop**
+
+  Added with limited values like div, span, section, main, etc.
+
+- **`id` prop**
+
+  Not added. We decided to wait for usecases.
+
+#### Styled Props vs Style Props
+
+Consumers can confuse “Styled Props” with styled-component or styled-system.
+
+Options:
+
+- [ ] Style-props
+- [x] Styled-props
+- [ ] Styling-props
+
+**Conclusion:**
+
+We figured that calling it style-props won’t solve the problem either so we decided to go with “styled-props” since “styled” is a common term used in most libraries.
+
+We decided to add more specific heading in documentation like- "Styled Props for Components"
+
+#### Whether styled-props get more priority over defined props in blade or the other way
+
+**Conclusion:** We decided to give more priority to styled-props and let consumers override.
+
+The only concern we had was that this comes with the possibility of consumer passing some prop that breaks the UI of component. Ideally this shouldn’t happen in most cases as the styled-props are very limited and rarely change UI. For some cases where this does happen, consumers would know they broke something and can find a workaround.
