docs: fix border color and dark theme titles

--- a/packages/blade/docs/guides/Intro.stories.mdx
+++ b/packages/blade/docs/guides/Intro.stories.mdx
@@ -4,6 +4,7 @@ import { Meta } from '@storybook/addon-docs';
 
 <p style={{ textAlign: 'center' }}>
   <img
+    height="80px"
     width="300px"
     alt="Blade Design System Logo"
     src="https://raw.githubusercontent.com/razorpay/blade/00a200a8f53c1abff99d81a73fbdcbd12a6d0dca/branding/blade-original.min.svg"
