docs(installation): add react-native-pager-view dep

--- a/packages/blade/docs/guides/Installation.stories.mdx
+++ b/packages/blade/docs/guides/Installation.stories.mdx
@@ -57,18 +57,20 @@ Blade has a peer dependency on a few libraries, you can skip adding it if you al
 
 3. For **React Native** projects you need to do additional setup for the peer dependencies: 
 
-    - react-native-reanimated
+    - `react-native-reanimated`
       - Follow [this guide](https://docs.swmansion.com/react-native-reanimated/docs/fundamentals/installation) to install it on Android & iOS which is required by Blade.
-    - react-native-svg
+    - `react-native-svg`
       - Follow [this guide](https://github.com/react-native-svg/react-native-svg#with-react-native-cli) to install it on Android & iOS which is required by Blade.
-    - react-native-gesture-handler
+    - `react-native-gesture-handler`
       - Follow [this guide](https://docs.swmansion.com/react-native-gesture-handler/docs/installation) to install it, note that you don't need to add `<GestureHandlerRootView style={{ flex: 1 }}>` again on the root because BladeProvider already adds that out of the box.
-    - @gorhom/bottom-sheet
+    - `@gorhom/bottom-sheet`
       - Add this as peer dependency, no need to do additional setup since BladeProvider already sets everything up.
-    - @gorhom/portal
+    - `@gorhom/portal`
       - Add this as peer dependency, no need to do additional setup since BladeProvider already sets everything up.
-    - @floating-ui/react-native
+    - `@floating-ui/react-native`
       - Add this as peer dependency, no need to do additional setup.
+    - `react-native-pager-view`
+      - Add this as peer dependency, no need to do additional setup. This is needed for react-native Tabs component as per [this guide](https://reactnavigation.org/docs/tab-view/#installation).
 
 ## 🔜 Add blade libraries to your Figma project
 
