--- a/packages/blade/docs/tokens/Typography.stories.mdx
+++ b/packages/blade/docs/tokens/Typography.stories.mdx
@@ -1,7 +1,8 @@
 import { Meta, DocsContainer } from '@storybook/addon-docs';
-import { useTheme, BladeProvider } from '../../src//components';
+import { useTheme, BladeProvider, Box } from '../../src//components';
 import { paymentTheme, bankingTheme } from '../../src/tokens';
 import { makeTypographySize } from '../../src/utils';
+import FigmaEmbed from '../../src/utils/storybook/FigmaEmbed';
 
 <Meta
   title="Tokens/Typography"
@@ -36,6 +37,10 @@ import { makeTypographySize } from '../../src/utils';
 # 🔡 Typography
 
 > These tokens should be used along with the [makeTypographySize util](?path=/story/utils-maketypographysize--page).
+
+<Box paddingY="spacing.6">
+  <FigmaEmbed src="https://www.figma.com/file/5BZsOpNjbUHqgVh850yPBW/%5BResearch%5D-Typography-%26-Spacing-Refresh?type=design&node-id=101-99618&mode=design&t=KdVVWtntizpKmsBt-0" />
+</Box>
 
 export const Typography = () => {
   const { theme } = useTheme();
