--- a/packages/blade/docs/guides/Installation.stories.mdx
+++ b/packages/blade/docs/guides/Installation.stories.mdx
@@ -111,7 +111,11 @@ h1, h2, h3, h4, h5, h6 {
 
 ### React Native Projects
 
-- Download `Lato` font from [here](https://fonts.google.com/share?selection.family=Lato:ital,wght@0,400;0,700;1,400;1,700)
+- Download
+
+  - `Inter` from https://rsms.me/inter/
+  - `Tasa Orbiter` from https://tasatype.localremote.co/
+
 - Copy the font files and paste them under the directory `<project_root>/public/fonts`(**create the directory if it doesn't exist**)
 - Create a React Native config file at the root of your project - `<project_root>/react-native.config.js` and add the following content to it
 
