feat: add zip and fix TASA name

--- a/packages/blade/docs/guides/Installation.stories.mdx
+++ b/packages/blade/docs/guides/Installation.stories.mdx
@@ -76,7 +76,7 @@ Coming Soon
 
 ## 🔡 Installing Fonts
 
-We use 2 fonts. [Tasa Orbiter](https://tasatype.localremote.co/) (for our headings), and [Inter](https://rsms.me/inter/) (for other text elements).
+We use 2 fonts. [TASA Orbiter](https://tasatype.localremote.co/) (for our headings), and [Inter](https://rsms.me/inter/) (for other text elements).
 
 ### Web Projects
 
