--- a/packages/blade/docs/guides/Installation.stories.mdx
+++ b/packages/blade/docs/guides/Installation.stories.mdx
@@ -115,7 +115,7 @@ We use 2 fonts. [TASA Orbiter](https://tasatype.localremote.co/) (for our headin
 
 - #### For iOS
 
-  - Copy all font files from `ios-fonts` directory to `<project_root>/public/fonts` (**create the directory if it doesn't exist**)
+  - Copy all font files from the `ios-fonts` directory to `<project_root>/public/fonts` (**create the directory if it doesn't exist**)
   - Create a React Native config file at the root of your project - `<project_root>/react-native.config.js` and add the following content to it
 
     ```js
