--- a/packages/blade/docs/tokens/Border.stories.mdx
+++ b/packages/blade/docs/tokens/Border.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, DocsContainer } from '@storybook/addon-docs';
-import { BladeProvider } from '../../src/components';
-import { makeBorderSize, useTheme } from '../../src/utils';
+import { BladeProvider, useTheme } from '../../src/components';
+import { makeBorderSize } from '../../src/utils';
 import { paymentTheme, bankingTheme } from '../../src/tokens';
 
 <Meta
