--- a/packages/blade/docs/tokens/Border.stories.mdx
+++ b/packages/blade/docs/tokens/Border.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, DocsContainer } from '@storybook/addon-docs';
 import { BladeProvider } from '../../src/components';
 import { makeBorderSize, useTheme } from '../../src/utils';
-import { paymentTheme, bankingTheme } from '../../src/tokens';
+import { bladeTheme } from '../../src/tokens';
 
 <Meta
   title="Tokens/Border"
@@ -9,13 +9,7 @@ import { paymentTheme, bankingTheme } from '../../src/tokens';
     docs: {
       container: ({ children, context }) => {
         const getThemeTokens = () => {
-          if (context.globals.themeTokenName === 'paymentTheme') {
-            return paymentTheme;
-          }
-          if (context.globals.themeTokenName === 'bankingTheme') {
-            return bankingTheme;
-          }
-          return null;
+          return bladeTheme;
         };
         return (
           <DocsContainer context={context}>
