--- a/packages/blade/docs/tokens/Elevation.stories.mdx
+++ b/packages/blade/docs/tokens/Elevation.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, DocsContainer } from '@storybook/addon-docs';
 import { useTheme, BladeProvider } from '../../src/components';
-import { paymentTheme, bankingTheme } from '../../src/tokens';
+import { bladeTheme } from '../../src/tokens';
 
 <Meta
   title="Tokens/Elevation"
@@ -8,13 +8,7 @@ import { paymentTheme, bankingTheme } from '../../src/tokens';
     docs: {
       container: ({ children, context }) => {
         const getThemeTokens = () => {
-          if (context.globals.themeTokenName === 'paymentTheme') {
-            return paymentTheme;
-          }
-          if (context.globals.themeTokenName === 'bankingTheme') {
-            return bankingTheme;
-          }
-          return null;
+          return bladeTheme;
         };
         return (
           <DocsContainer context={context}>
