--- a/packages/blade/docs/tokens/Motion.stories.mdx
+++ b/packages/blade/docs/tokens/Motion.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, DocsContainer } from '@storybook/addon-docs';
 import styled from 'styled-components';
 import { useTheme, BladeProvider } from '../../src/components';
-import { paymentTheme, bankingTheme } from '../../src/tokens';
+import { bladeTheme } from '../../src/tokens';
 import { makeMotionTime } from '../../src/utils';
 import MovingDiv from '../components/MovingDiv';
 
@@ -11,13 +11,7 @@ import MovingDiv from '../components/MovingDiv';
     docs: {
       container: ({ children, context }) => {
         const getThemeTokens = () => {
-          if (context.globals.themeTokenName === 'paymentTheme') {
-            return paymentTheme;
-          }
-          if (context.globals.themeTokenName === 'bankingTheme') {
-            return bankingTheme;
-          }
-          return null;
+          return bladeTheme;
         };
         return (
           <DocsContainer context={context}>
